fix broken search input on safari

--- a/src/frontend/src/components/search/search.less
+++ b/src/frontend/src/components/search/search.less
@@ -120,6 +120,7 @@
       }
 
       input {
+        -webkit-appearance: none;
         padding: @m-stack 0 @m-stack 0;
         box-sizing: content-box;
         background-color: transparent;
